@@ -44,12 +44,13 @@ be_visitor_context_svs::visit_component (be_component *node)
       << be_idt << be_idt_nl
       << "::Components::CCMHome_ptr h," << be_nl
       << "::CIAO::Container_ptr c," << be_nl
-      << "PortableServer::Servant sv)" << be_uidt_nl
-      << ": ::CIAO::Context_Impl_Base (h, c)," << be_idt_nl
+      << "PortableServer::Servant sv," << be_uidt_nl
+      << "const char *id)" << be_uidt_nl
+      << ": ::CIAO::Context_Impl_Base (h, c, id)," << be_idt_nl
       << "::CIAO::Context_Impl<" << be_idt_nl
       << global << sname << "::CCM_"
       << lname << "_Context," << be_nl
-      << "::" << node->full_name () << "> (h, c, sv)";
+      << "::" << node->full_name () << "> (h, c, sv, id)";
 
   if (swapping_)
     {
